outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-23_15-16-28/evaluations/problem_eval-284563604900271087_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores based on betweenness centrality and adaptive exploration bonuses that scale with remaining progress, while maintaining a balance between immediate and future cost minimization through a novel progress-dependent weight adjustment mechanism.}
                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores based on betweenness centrality and adaptive exploration bonuses that scale with remaining progress, while maintaining a balance between immediate and future cost minimization through a novel progress-dependent weight adjustment mechanism.}
                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
